--- a/gameConfig/UIFiles/configError.fxml
+++ b/gameConfig/UIFiles/configError.fxml
@@ -12,10 +12,10 @@
   <Text layoutX="64.0" layoutY="88.0" scaleX="1.000000744700174" scaleY="1.000005660585816" strokeType="OUTSIDE"
         strokeWidth="0.0" text="the game before continuing!">
     <font>
-      <Font size="13.0" fx:id="x1"/>
+      <Font size="13.0"/>
     </font>
   </Text>
-  <Text font="$x1" layoutX="64.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0"
+  <Text layoutX="64.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0"
         text="Please finish configuring"/>
   <Circle fill="RED" layoutX="30.0" layoutY="67.0" radius="19.642105102539062" stroke="BLACK" strokeType="INSIDE"/>
   <Text layoutX="26.0" layoutY="76.0" scaleX="1.2303426791277259" scaleY="1.0" strokeType="OUTSIDE" strokeWidth="0.0"
