--- a/gameConfig/UIFiles/PubGambleInterface.fxml
+++ b/gameConfig/UIFiles/PubGambleInterface.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
-
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gameConfig.GameController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="gameConfig.GameController">
   <ImageView fitHeight="433.63277858844873" fitWidth="611.8854370117188" layoutX="1.0" layoutY="-34.0"
              pickOnBounds="true" preserveRatio="true">
     <Image url="@Media/pubBg2.jpg"/>
@@ -18,29 +19,44 @@
              pickOnBounds="true" preserveRatio="false">
     <Image url="@Media/chalkBoard.png"/>
   </ImageView>
-    <Text fill="WHITE" layoutX="173.0" layoutY="48.0" scaleX="1.0131768113628092" scaleY="1.0000026688015538" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Pub!">
-      <font>
-        <Font name="Brush Script MT Italic" size="40.0" />
-      </font>
-    </Text>
-    <Button fx:id="backButton" layoutX="14.0" layoutY="26.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
-    <Text fill="WHITE" layoutX="183.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gamble by getting bonus money&#10;for your unused time!" textAlignment="CENTER">
-      <font>
-        <Font name="Bradley Hand Bold" size="17.0" />
-      </font>
-    </Text>
-    <Text fill="WHITE" layoutX="178.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Click the slot machine lever to bet" />
+  <Text fill="WHITE" layoutX="173.0" layoutY="48.0" scaleX="1.0131768113628092" scaleY="1.0000026688015538"
+        strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Pub!">
+    <font>
+      <Font name="Brush Script MT Italic" size="40.0"/>
+    </font>
+  </Text>
+  <Button fx:id="backButton" layoutX="14.0" layoutY="26.0" mnemonicParsing="false" onAction="#backButtonClicked"
+          text="Back"/>
+  <Text fill="WHITE" layoutX="183.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0"
+        text="Gamble by getting bonus money&#10;for your unused time!" textAlignment="CENTER">
+    <font>
+      <Font name="Bradley Hand Bold" size="17.0"/>
+    </font>
+  </Text>
+  <Text fill="WHITE" layoutX="206.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0"
+        text="Click the slot machine lever to bet">
+    <font>
+      <Font name="Bradley Hand Bold" size="13.0"/>
+    </font>
+  </Text>
   <ImageView fitHeight="339.65692138671875" fitWidth="253.2146647941387" layoutX="314.0" layoutY="125.0"
              pickOnBounds="true" preserveRatio="true">
-    <Image url="@Media/slotmachine3.png"/>
+    <image>
+      <Image url="@Media/slotmachine3.png"/>
+    </image>
   </ImageView>
-    <Button fx:id="gambleButton" layoutX="485.0" layoutY="214.0" minWidth="22.0" mnemonicParsing="false" onAction="#gambleButtonClicked" opacity="0.0" prefHeight="64.0" prefWidth="62.96044921875" text="Gamble!" />
+  <Button fx:id="gambleButton" layoutX="485.0" layoutY="214.0" minWidth="22.0" mnemonicParsing="false"
+          onAction="#gambleButtonClicked" opacity="0.0" prefHeight="64.0" prefWidth="62.96044921875" text="Gamble!"/>
   <ImageView fitHeight="49.062625885009766" fitWidth="103.56688690185547" layoutX="375.0" layoutY="156.0" opacity="0.85"
              pickOnBounds="true" preserveRatio="false">
-    <Image url="@Media/clock.png"/>
+    <image>
+      <Image url="@Media/clock.png"/>
+    </image>
   </ImageView>
   <ImageView fitHeight="52.466007232666016" fitWidth="110.56686401367188" layoutX="374.0" layoutY="354.0" opacity="0.92"
              pickOnBounds="true" preserveRatio="false">
-    <Image url="@Media/clock.png"/>
+    <image>
+      <Image url="@Media/clock.png"/>
+    </image>
   </ImageView>
 </AnchorPane>
