--- a/gameConfig/UIFiles/PubGambleInterface.fxml
+++ b/gameConfig/UIFiles/PubGambleInterface.fxml
@@ -39,24 +39,20 @@
       <Font name="Bradley Hand Bold" size="13.0"/>
     </font>
   </Text>
-  <ImageView fitHeight="339.65692138671875" fitWidth="253.2146647941387" layoutX="314.0" layoutY="125.0"
-             pickOnBounds="true" preserveRatio="true">
-    <image>
-      <Image url="@Media/slotmachine3.png"/>
-    </image>
-  </ImageView>
+    <ImageView fitHeight="339.65692138671875" fitWidth="253.2146647941387" layoutX="314.0" layoutY="125.0"
+               pickOnBounds="true" preserveRatio="true">
+        <Image url="@Media/slotmachine3.png"/>
+    </ImageView>
   <Button fx:id="gambleButton" layoutX="485.0" layoutY="214.0" minWidth="22.0" mnemonicParsing="false"
           onAction="#gambleButtonClicked" opacity="0.0" prefHeight="64.0" prefWidth="62.96044921875" text="Gamble!"/>
-  <ImageView fitHeight="49.062625885009766" fitWidth="103.56688690185547" layoutX="375.0" layoutY="156.0" opacity="0.85"
-             pickOnBounds="true" preserveRatio="false">
-    <image>
-      <Image url="@Media/clock.png"/>
-    </image>
-  </ImageView>
-  <ImageView fitHeight="52.466007232666016" fitWidth="110.56686401367188" layoutX="374.0" layoutY="354.0" opacity="0.92"
-             pickOnBounds="true" preserveRatio="false">
-    <image>
-      <Image url="@Media/clock.png"/>
-    </image>
-  </ImageView>
+    <ImageView fitHeight="49.062625885009766" fitWidth="103.56688690185547" layoutX="375.0" layoutY="156.0"
+               opacity="0.85"
+               pickOnBounds="true" preserveRatio="false">
+        <Image url="@Media/clock.png"/>
+    </ImageView>
+    <ImageView fitHeight="52.466007232666016" fitWidth="110.56686401367188" layoutX="374.0" layoutY="354.0"
+               opacity="0.92"
+               pickOnBounds="true" preserveRatio="false">
+        <Image url="@Media/clock.png"/>
+    </ImageView>
 </AnchorPane>
