--- a/gameConfig/UIFiles/playerStart.fxml
+++ b/gameConfig/UIFiles/playerStart.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="150.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gameConfig.GameController">
-    <Button fx:id="startButton" onAction="#startButtonClicked" layoutX="32.0" layoutY="86.0" mnemonicParsing="false" text="Start Turn" />
-    <Text layoutX="16.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="It's Your Turn!">
-      <font>
-        <Font size="17.0"/>
-      </font>
-    </Text>
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="166.99990000000253" prefWidth="149.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gameConfig.GameController">
+  <Button fx:id="startButton" layoutX="32.0" layoutY="58.0" mnemonicParsing="false" onAction="#startButtonClicked" text="Start Turn" />
+  <Text layoutX="16.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="It's Your Turn!">
+    <font>
+      <Font size="17.0" />
+    </font>
+  </Text>
+  <ImageView id="mule" fitHeight="61.0" fitWidth="55.0" layoutX="47.0" layoutY="92.0" pickOnBounds="true">
+    <image>
+      <Image url="@Media/mule.gif" preserveRatio="true" smooth="true" />
+    </image>
+  </ImageView>
 </AnchorPane>
