--- a/gameConfig/UIFiles/AssayInterface.fxml
+++ b/gameConfig/UIFiles/AssayInterface.fxml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1"
-            xmlns="http://javafx.com/javafx/2.2" fx:controller="gameConfig.GameController">
+
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gameConfig.GameController">
   <ImageView id="assaybg" fitHeight="400.0" fitWidth="600.0" layoutX="0.0" layoutY="0.0" pickOnBounds="true">
-    <Image url="@Media/assaybg.jpg" preserveRatio="true" smooth="true"/>
+    <Image url="@Media/assaybg.jpg" preserveRatio="true" smooth="true" />
   </ImageView>
   <ImageView id="menu" fitHeight="192.0" fitWidth="462.0" layoutX="77.0" layoutY="104.0" pickOnBounds="true">
-    <Image url="@Media/menu.jpg" preserveRatio="true" smooth="true"/>
+    <Image url="@Media/menu.jpg" preserveRatio="true" smooth="true" />
   </ImageView>
-  <Button id="backButton3" fx:id="assayBackButton" layoutX="26.0" layoutY="14.0" mnemonicParsing="false"
-          onAction="#assayBackButtonClicked" text="Back"/>
+  <Button id="backButton3" fx:id="assayBackButton" layoutX="26.0" layoutY="14.0" mnemonicParsing="false" onAction="#assayBackButtonClicked" text="Back" />
   <Text layoutX="207.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Assay Office!">
     <font>
-      <Font size="15.0"/>
+      <Font size="15.0" />
     </font>
   </Text>
-  <Button fx:id="mineButton" layoutX="157.0" layoutY="202.0" mnemonicParsing="false" onAction="#mineButtonClicked"
-          text="Start Mining!"/>
-  <Button layoutX="337.0" layoutY="202.0" mnemonicParsing="false" text="Report a Sample"/>
+  <Button fx:id="mineButton" layoutX="157.0" layoutY="238.0" mnemonicParsing="false" onAction="#mineButtonClicked" text="Start Mining!" />
+  <Button layoutX="337.0" layoutY="238.0" mnemonicParsing="false" text="Report a Sample" />
+  <ImageView id="mining" fitHeight="75.0" fitWidth="79.0" layoutX="261.0" layoutY="153.0" pickOnBounds="true">
+    <effect>
+      <InnerShadow />
+    </effect>
+    <image>
+      <Image url="@Media/mining.jpg" preserveRatio="true" smooth="true" />
+    </image>
+  </ImageView>
 </AnchorPane>
