--- a/gameConfig/UIFiles/AssayInterface.fxml
+++ b/gameConfig/UIFiles/AssayInterface.fxml
@@ -2,44 +2,49 @@
 
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gameConfig.GameController">
-   <children>
-     <ImageView id="assaybg" fitHeight="400.0" fitWidth="600.0" layoutX="0.0" layoutY="0.0" pickOnBounds="true">
-        <image>
-          <Image preserveRatio="true" smooth="true" url="@Media/assaybg.jpg" />
-        </image>
-     </ImageView>
-     <ImageView id="menu" fitHeight="192.0" fitWidth="462.0" layoutX="77.0" layoutY="104.0" pickOnBounds="true">
-        <image>
-          <Image preserveRatio="true" smooth="true" url="@Media/menu.jpg" />
-        </image>
-     </ImageView>
-     <Button id="backButton3" fx:id="assayBackButton" layoutX="193.0" layoutY="234.0" mnemonicParsing="false" onAction="#assayBackButtonClicked" text="Back" />
-     <Text layoutX="207.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Assay Office!">
-       <font>
-         <Font size="15.0" />
-       </font>
-     </Text>
-     <Button fx:id="testButton" layoutX="350.0" layoutY="234.0" mnemonicParsing="false" onAction="#testButtonClicked" text="Assay Test" />
-      <Text layoutX="217.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Buy an assay test for 100 to see" textAlignment="CENTER">
-         <font>
-            <Font size="12.0" />
-         </font>
-      </Text>
-      <Text layoutX="203.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="the Crystite content of a plot of land!" textAlignment="CENTER">
-         <font>
-            <Font size="12.0" />
-         </font>
-      </Text>
-   </children>
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gameConfig.GameController">
+  <children>
+    <ImageView id="assaybg" fitHeight="400.0" fitWidth="600.0" layoutX="0.0" layoutY="0.0" pickOnBounds="true">
+      <image>
+        <Image url="@Media/assaybg.jpg" preserveRatio="true" smooth="true" />
+      </image>
+    </ImageView>
+    <ImageView id="menu" fitHeight="245.0" fitWidth="462.0" layoutX="77.0" layoutY="51.0" pickOnBounds="true">
+      <image>
+        <Image url="@Media/menu.jpg" preserveRatio="true" smooth="true" />
+      </image>
+    </ImageView>
+    <Button id="backButton3" fx:id="assayBackButton" layoutX="192.0" layoutY="255.0" mnemonicParsing="false" onAction="#assayBackButtonClicked" text="Back" />
+    <Text layoutX="208.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Assay Office!">
+      <font>
+        <Font size="15.0" />
+      </font>
+    </Text>
+    <Button fx:id="testButton" layoutX="350.0" layoutY="255.0" mnemonicParsing="false" onAction="#testButtonClicked" text="Assay Test" />
+    <Text layoutX="217.0" layoutY="229.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Buy an assay test for 100 to see" textAlignment="CENTER">
+      <font>
+        <Font size="12.0" fx:id="x1" />
+      </font>
+    </Text>
+    <Text font="$x1" layoutX="203.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="the Crystite content of a plot of land!" textAlignment="CENTER" />
+    <ImageView id="mining" fitHeight="101.498046875" fitWidth="135.61328125" layoutX="240.0" layoutY="107.0" pickOnBounds="true">
+      <effect>
+        <InnerShadow />
+      </effect>
+      <image>
+        <Image url="@Media/mining.jpg" preserveRatio="true" smooth="true" />
+      </image>
+    </ImageView>
+  </children>
 </AnchorPane>
